// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore items without visibleName 1`] = `
<ul>
  <li
    className="undefined"
    key="#button"
  >
    <Styled(Link)
      className=""
      href="#button"
    >
      Button
    </Styled(Link)>
  </li>
</ul>
`;

exports[`should render sections with nested components 1`] = `
<ul>
  <li
    className="undefined"
    key="#button"
  >
    <Styled(Link)
      className=""
      href="#button"
    >
      Button
    </Styled(Link)>
  </li>
  <li
    className="undefined"
    key="#input"
  >
    <Styled(Link)
      className=""
      href="#input"
    >
      Input
    </Styled(Link)>
  </li>
</ul>
`;

exports[`should set a parameter on link when useHashId is activated 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "/#/Components?id=button",
        "isExternal": false,
        "name": "Button",
        "slug": "button",
        "visibleName": "Button",
      },
      Object {
        "href": "/#/Components?id=input",
        "isExternal": false,
        "name": "Input",
        "slug": "input",
        "visibleName": "Input",
      },
    ]
  }
/>
`;

exports[`should set a sub route on link when useHashId is deactivated 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "/#/Components/Button",
        "isExternal": false,
        "name": "Button",
        "slug": "button",
      },
      Object {
        "href": "/#/Components/Input",
        "isExternal": false,
        "name": "Input",
        "slug": "input",
      },
    ]
  }
/>
`;

exports[`should set the correct href for items 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "/#button",
        "isExternal": false,
        "name": "Button",
        "slug": "button",
        "visibleName": "Button",
      },
      Object {
        "href": "/#input",
        "isExternal": false,
        "name": "Input",
        "slug": "input",
        "visibleName": "Input",
      },
    ]
  }
/>
`;
